--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -6,6 +6,12 @@
   padding: 0;
 }
 
+body,
+html {
+  width: 100%;
+  height: 100%;
+}
+
 body {
   height: 100%;
   background-color: white;
@@ -25,10 +31,6 @@ html {
   box-sizing: border-box;
 }
 
-#app {
-  height: 100%;
-}
-
 *,
 *:before,
 *:after {
@@ -37,10 +39,6 @@ html {
 
 .no-padding {
   padding: 0px !important;
-}
-
-.padding-content {
-  padding: 4px 0;
 }
 
 a,
