--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,7 @@
 // Head
 $headBg: #0d0b16;
 $appBg: #4b8b94;
-// $headHeight: 50px;
+$headHeight: 50px;
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
 // :export {
