--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -88,3 +88,20 @@ a:active {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+//
+// @media only screen and (max-width: 1600px) and (min-width: 1280px){
+//   html{
+//     font-size: 14px;
+//   }
+// }
+// @media only screen and (max-width: 1280px) and (min-width: 960px){
+//   html{
+//     font-size: 12px;
+//   }
+// }
+// @media only screen and (max-width: 960px){
+//   html{
+//     font-size: 10px;
+//   }
+// }
