--- a/src/views/Home/index.scss
+++ b/src/views/Home/index.scss
@@ -1,21 +1,22 @@
+@import '~@/styles/scale.scss';
 .home {
+  height: 100%;
+
+  .aside-left {
+    background-color: #d3dce6;
+    color: #333;
+    text-align: center;
     height: 100%;
+    width: vw(478);
+    float: left;
+  }
 
-    .aside-left {
-        background-color: #D3DCE6;
-        color: #333;
-        text-align: center;
-        height: 100%;
-        width: 340px;
-        float: left;
-    }
-
-    .aside-right {
-        background-color: #1E1E1E;
-        color: #333;
-        text-align: center;
-        height: 100%;
-        width: 340px;
-        float: right;
-    }
+  .aside-right {
+    background-color: #1e1e1e;
+    color: #333;
+    text-align: center;
+    height: 100%;
+    width: vw(478);
+    float: right;
+  }
 }
