--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,7 +1,10 @@
 // Head
 $headBg: #0d0b16;
 $appBg: #4b8b94;
-$headHeight: 72;
+$headHeight: 58;
+$asideWidth: 350;
+$asideWidthPX: 350px;
+
 // the :export directive is the magic sauce for webpack
 // https://www.bluematador.com/blog/how-to-share-variables-between-js-and-sass
 // :export {
