--- a/src/views/Home/index.scss
+++ b/src/views/Home/index.scss
@@ -16,6 +16,7 @@
     background-repeat: no-repeat;
     background-size: 100% 100%;
     border-right: 1px dotted #bcbcbc;
+    position: relative;
   }
 
   .aside-right {
@@ -31,5 +32,28 @@
     background-repeat: no-repeat;
     background-size: 100% 100%;
     border-right: 1px dotted #bcbcbc;
+  }
+  .svgcircle-view {
+    margin-top: vh(20);
+    width: 100%;
+    height: vh(270);
+    position: relative;
+    .svgcircle {
+      padding-left: vw(50);
+      width: 100%;
+      height: 100%;
+    }
+  }
+
+  .equalizer-bar-view {
+    margin-top: vh(20);
+    width: 100%;
+    height: vh(220);
+    position: relative;
+    .eb {
+      margin-left: vw(100);
+      width: 20%;
+      height: 100%;
+    }
   }
 }
